# qupa

./: README.md  ros2_env_pc.bash  ros2_env_robot.bash
docs/: camera_setup.md  installation.md
qupa_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
qupa_description/launch/: description.launch.py
qupa_description/meshes/: EE_Link.dae  Left_Link_2.dae  Link_1.dae  module.dae
qupa_description/urdf/: gazebo_plugins.xacro  qupa.xacro  qupa_real.xacro
qupa_description/urdf/bases/: module.xacro
qupa_description/urdf/sensors/: color.xacro  infrared.xacro  mirror.xacro
qupa_description/urdf/wheels/: caster.xacro  wheel.xacro
qupa_desktop/: package.xml  setup.cfg  setup.py
qupa_desktop/launch/: view.launch.py
qupa_hardware/: package.xml  setup.cfg  setup.py
qupa_hardware/config/: calibration.rviz  camera.yaml  floor_sensor.yaml  ir_scanner.yaml  leds.yaml  motor.yaml
qupa_hardware/launch/: camera.launch.py  camera_calibration.launch.py  hardware.launch.py  ir_scanner.launch.py
qupa_hardware/qupa_hardware/: camera_calibration.py  camera_calibration_node.py  camera_node.py  floor_sensor_node.py  ir_scanner_node.py  led_node.py  motor_driver_node.py
qupa_msgs/: CMakeLists.txt  package.xml
qupa_msgs/msg/: Detection.msg  DetectionArray.msg
